feat: prometheus metrics

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -18,6 +18,9 @@ LogSaveName = log
 LogFileExt = log
 TimeFormat = 20060102
 
+[prometheus]
+Hostname = goauth_instance
+
 [server]
 #debug or release
 RunMode = debug
