feat: fix logging

--- a/conf/app.ini
+++ b/conf/app.ini
@@ -3,7 +3,7 @@ PageSize = 10
 JwtSecret = 233
 PrefixUrl = http://127.0.0.1:8000
 
-RuntimeRootPath = bin/runtime/
+BinaryRootPath = bin/
 
 # MB
 ImageMaxSize = 5
@@ -14,9 +14,9 @@ QrCodeSavePath = qrcode/
 FontSavePath = fonts/
 
 LogSavePath = logs/
-LogSaveName = log
+LogSaveName = log-
 LogFileExt = log
-TimeFormat = 20060102
+TimeFormat = 2006-01-02
 
 [prometheus]
 Hostname = goauth_instance
