--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -10,7 +10,7 @@ scrape_configs:
   - job_name: 'goauth'
     scrape_interval: 30s
     static_configs:
-      - targets: ['http://gogin:8000']
+      - targets: ['localhost:8000']
       
   # - job_name: 'node_exporter'
   #   static_configs:
