--- a/dev/.air.conf
+++ b/dev/.air.conf
@@ -17,7 +17,7 @@ bin = "bin/main"
 include_ext = ["go", "tpl", "tmpl", "html"]
 
 # Ignore these filename extensions or directories.
-exclude_dir = [".git", "bin", "vendor"]
+exclude_dir = [".git", "bin", "vendor", "frontend"]
 
 # Watch these directories if you specified.
 include_dir = []
@@ -30,20 +30,6 @@ delay = 1000 # ms
 
 # Stop to run old binary when build errors occur.
 stop_on_error = true
-
-# Logs location
-log = "logs/air_errors.log"
-
-[log]
-# Show log time
-time = false
-
-[color]
-# Customize each part's color. If no color is found, use the raw app log.
-main = "magenta"
-watcher = "cyan"
-build = "yellow"
-runner = "green"
 
 [misc]
 # Delete tmp directory on exit
