--- a/dev/.air.conf
+++ b/dev/.air.conf
@@ -17,7 +17,7 @@ bin = "bin/main"
 include_ext = ["go", "tpl", "tmpl", "html"]
 
 # Ignore these filename extensions or directories.
-exclude_dir = [".git", "bin", "vendor", "frontend"]
+exclude_dir = [".git", "bin", "tools", "vendor", "frontend"]
 
 # Watch these directories if you specified.
 include_dir = []
