chore: remove DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,13 @@
 # Binaries for programs and plugins
 bin/
 vendor/
+logs/
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+.DS_Store
 
 # Test binary, built with `go test -c`
 *.test
