--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "is-empty": "^1.2.0",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/is-empty": "^1.2.1"
   }
 }
